added features in main

--- a/index.html
+++ b/index.html
@@ -16,17 +16,39 @@
         <div class="header">
             <div class="header-content">
                 <h3 class="header-title">Let's make beautiful flowers a part of your life.</h3>
-                <p class="header-description">It is a long established fact that a reader will be distracted by the readable
+                <p class="header-description">It is a long established fact that a reader will be distracted by the
+                    readable
                     content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a
                     more-or-less normal distribution of letters.</p>
                 <button class="header-btn">Shop Now</button>
-            </div> 
+            </div>
             <img src="images/pngwing 10.png" alt="" class="header-img">
         </div>
-        
+
     </header>
     <main>
+        <div class="main-content">
+            <div class="feature">
+                <h3 class="feature-title">Our Featured Flowers</h3>
+                <p class="feature-description">It is a long established fact that a reader will be distracted by the
+                    readable content of a page when looking at its layout.</p>
+                <div class="feature-img">
+                    <div class="img-box">
+                        <img src="images/pngwing 6.png" alt="" class="fimg1">
+                        <p class="img-title">Pink Flower Tree</p>
+                    </div>
+                    <div class="img-box">
+                        <img src="images/pngwing 5.png" alt="" class="fimg2">
+                        <p class="img-title">Pink Flower Tree</p>
+                    </div>
+                    <div class="img-box">
+                        <img src="images/pngwing 7.png" alt="" class="fimg3">
+                        <p class="img-title">Pink Flower Tree</p>
+                    </div>
+                </div>
+            </div>
 
+        </div>
     </main>
     <footer>
 
