--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
                     </div>
                 </div>
             </div>
+            <div class="icon-content">
+                <div class="icon-box">
+                    <img src="images/Group 57.png" alt="" class="icon-img">
+                    <h4 class="icon-title">Same Day Delivery. Click & Collect.</h4>
+                </div>
+                <div class="icon-box">
+                    <img src="images/Group 58.png" alt="" class="icon-img">
+                    <h4 class="icon-title">Fresh Flowers. Local Growers.</h4>
+                </div>
+                <div class="icon-box">
+                    <img src="images/Group 59.png" alt="" class="icon-img">
+                    <h4 class="icon-title">24/7 Free Support</h4>
+                </div>
+            </div>
 
         </div>
     </main>
