--- a/index.html
+++ b/index.html
@@ -61,7 +61,27 @@
                     <h4 class="icon-title">24/7 Free Support</h4>
                 </div>
             </div>
-
+            <div class="deal">
+                <div class="deal-content">
+                    <h3 class="deal-title">Hot Deal ! Sale Up To 25% <span class="deal-text">Off</span></h3>
+                    <p class="deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <button class="header-btn">Sign Up</button>
+                </div>
+                <img src="images/pngwing 8.png" alt="" class="deal-img">
+            </div>
+            <div class="insta">
+                <h3 class="insta-title">Instagram</h3>
+                <p class="insta-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <div class="insta-img">
+                    <img src="images/Flower 01.png" alt="">
+                    <img src="images/Rectangle 4.png" alt="">
+                    <img src="images/Rectangle 5.png" alt="">
+                    <img src="images/Rectangle 6.png" alt="">
+                </div>
+            </div>
+            <div class="latest-deal">
+                
+            </div>
         </div>
     </main>
     <footer>
