--- a/index.html
+++ b/index.html
@@ -64,14 +64,19 @@
             <div class="deal">
                 <div class="deal-content">
                     <h3 class="deal-title">Hot Deal ! Sale Up To 25% <span class="deal-text">Off</span></h3>
-                    <p class="deal-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                    <p class="deal-description">It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
                     <button class="header-btn">Sign Up</button>
                 </div>
                 <img src="images/pngwing 8.png" alt="" class="deal-img">
             </div>
             <div class="insta">
-                <h3 class="insta-title">Instagram</h3>
-                <p class="insta-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+                <div class="insta-content">
+                    <h3 class="insta-title">Instagram</h3>
+                    <p class="insta-description">It is a long established fact that a reader will be distracted by the
+                        readable content of a page when looking at its layout.</p>
+                </div>
+
                 <div class="insta-img">
                     <img src="images/Flower 01.png" alt="">
                     <img src="images/Rectangle 4.png" alt="">
@@ -80,12 +85,23 @@
                 </div>
             </div>
             <div class="latest-deal">
-                
+               <div class="ldeal-content">
+                <h3 class="ldeal-title">Get The Latest Deals</h3>
+               <p class="ldeal-description">$30 coupon for first shopping</p>
+               </div>
+                <div class="ldeal-input">
+                    <input type="email" placeholder="Enter your email here..." name="" id="ldeal-email">
+                    <button class="header-btn">Subscribe</button>
+                </div>
             </div>
         </div>
     </main>
     <footer>
-
+        <div class="footer-content">
+            <h3 class="footer-title"><span class="deal-text">Flower</span>Shop</h3>
+            <p class="footer-description">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
+            <p class="footer-copywrite">@2020-2023, FlowerShop.com. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 
